lib_LIBRARIES = libelf.a

libelf_a_SOURCES = \
	Error.h \
	\
	File.h \
	File.cc \
	\
	File32.h \
	File32.cc \
	\
	File64.h \
	File64.cc \
	\
	ProgramHeader.h \
	ProgramHeader.cc \
	\
	ProgramHeader32.h \
	ProgramHeader32.cc \
	\
	ProgramHeader64.h \
	ProgramHeader64.cc \
	\
	Section.h \
	Section.cc \
	\
	Section32.h \
	Section32.cc \
	\
	Section64.h \
	Section64.cc \
	\
	Symbol.h \
	Symbol.cc \
	\
	Symbol32.h \
	Symbol32.cc \
	\
	Symbol64.h \
	Symbol64.cc
	

AM_CPPFLAGS = @M2S_INCLUDES@

